# kamap

./: .gitignore  LICENSE  README.md  README_en.md  kamap.yaml
docs/: formatter-and-mapping-guide.md  plugin-system-guide.md
kamap-rust/: Cargo.toml  README.md
kamap-rust/crates/kamap-cli/: Cargo.toml
kamap-rust/crates/kamap-cli/src/: main.rs
kamap-rust/crates/kamap-cli/src/commands/: asset.rs  check.rs  describe.rs  explain.rs  index.rs  init.rs  mapping.rs  mod.rs  plugin.rs  provider.rs  scan.rs
kamap-rust/crates/kamap-core/: Cargo.toml
kamap-rust/crates/kamap-core/src/: lib.rs  path_util.rs
kamap-rust/crates/kamap-core/src/ack/: store.rs
kamap-rust/crates/kamap-core/src/analyzer/: impact.rs  mod.rs  policy.rs
kamap-rust/crates/kamap-core/src/anchor/: resolver.rs
kamap-rust/crates/kamap-core/src/builder/: annotation.rs  frontmatter.rs  mod.rs  naming.rs
kamap-rust/crates/kamap-core/src/config/: manager.rs  mod.rs  schema.rs
kamap-rust/crates/kamap-core/src/git/: diff.rs
kamap-rust/crates/kamap-core/src/mapping/: engine.rs  index.rs  mod.rs
kamap-rust/crates/kamap-core/src/models/: asset.rs  impact.rs  mapping.rs  mod.rs  source.rs
kamap-rust/crates/kamap-core/src/output/: json.rs  mod.rs  text.rs
kamap-rust/crates/kamap-core/src/plugin/: mod.rs  protocol.rs  registry.rs
kamap-rust/crates/kamap-core/src/provider/: prompt.rs
kamap-rust/crates/kamap-core/src/storage/: sqlite.rs
kamap-rust/crates/kamap-mcp/: Cargo.toml
kamap-rust/crates/kamap-mcp/src/: main.rs
kamap-rust/crates/kamap-plugin-localfs/: Cargo.toml
kamap-rust/crates/kamap-plugin-localfs/src/: lib.rs  markdown.rs
kamap-rust/crates/kamap-plugin-sqlite/: Cargo.toml
kamap-rust/crates/kamap-plugin-sqlite/src/: lib.rs
kamap-skill/: SKILL.md
kamap-skill/references/: detailed-guide.md
scripts/: build-skill.ps1  build-skill.sh
