[workspace]
resolver = "2"
members = [
    "crates/kamap-core",
    "crates/kamap-cli",
    "crates/kamap-mcp",
    "crates/kamap-plugin-localfs",
    "crates/kamap-plugin-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kamap contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Git
git2 = "0.19"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Glob matching
globset = "0.4"
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP (for plugins)
reqwest = { version = "0.12", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
