[package]
name = "kamap-plugin-localfs"
version.workspace = true
edition.workspace = true

[dependencies]
kamap-core = { path = "../kamap-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
